# KinectFusion

./: .gitignore  CMakeLists.txt  CameraParameters.h  FreeImageHelper.cpp  ICPOptimizer.h  PointCloud.h  TSDF.h  Volume.cpp  Volume.h  Voxel.h  main.cpp
include/: CameraParameters.h  ICPOptimizer.h  NearestNeighbor.h  PointCloud.h  SimpleMesh.h  VirtualSensor.h  Volume.h
src/: Volume.cpp  main.cpp
src/kernels/: dummy.cu
src/kernels/include/: cuda_error_handle.h  dummy.cuh
